# latex2ufdissertation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  converter.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: json-schema.md  spec-v1.0.md  uf-rules.md  v1.0-rule-rebrand.md
docs/design/: 2026-05-26-latex2ufdissertation-design.md
docs/plans/: 2026-05-26-latex2ufdissertation-v0.1.md
examples/demo_dissertation/: .gitignore  README.md  abbreviations.tex  acknowledgementsFile.tex  appendix.tex  chapter1.tex  chapter2.tex  chapter3.tex  main.tex  referenceFile.bib  ufdissertation.cls
examples/ufdissertation_samples/: README.md  TDP-Abstract.docx  TDP-Acknowledgments.docx  TDP-Biographical-Sketch.docx  TDP-Block-Quote.docx  TDP-Copyright-Page.docx  TDP-Equation.docx  TDP-Figure.docx  TDP-List-of-Figures.docx  TDP-List-of-Tables.docx  TDP-Long-Bulleted-List.docx  TDP-Short-Bulleted-List.docx  TDP-Table-of-Contents.docx  TDP-Table.docx  TDP-Title-Page.docx
latex2ufdissertation/: __init__.py  cli.py
latex2ufdissertation/pipeline/: build.py  checks.py  init.py  main_tex.py  pdf_checks.py  report.py  resolve.py  rules.py  types.py
latex2ufdissertation/pipeline/template/: README.md  abbreviations.tex
pipeline/: build.py  checks.py  init.py  main_tex.py  resolve.py  types.py
tests/: test_build.py  test_checks.py  test_cli.py  test_converter.py  test_determinism.py  test_fixtures.py  test_init.py  test_main_tex.py  test_pdf_checks.py  test_public_api.py  test_report.py  test_resolve.py  test_rules.py  test_types.py  test_version_sync.py
tests/fixtures/: README.md
tests/fixtures/demo_dissertation/: .gitignore  README.md  abstractFile.tex  appendix.tex  biographyFile.tex  chapter1.tex  chapter2.tex  dedicationFile.tex  main.tex  referenceFile.bib
tests/fixtures/uf_d1_editmode/: expected_findings.json  expected_report.txt
tests/fixtures/uf_d2_compiler_directive/: expected_findings.json  expected_report.txt
tests/fixtures/uf_d3_override_options/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f10_too_few_chapters/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f11_titleformat_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f13_wrong_documentclass/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f14_missing_committee_metadata/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f15_abstract_over_350_words/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f17_subheading_titlecase/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f1_geometry_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f2_package_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f2_setmainfont_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f3_fontsize_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f4_singlespacing_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f5_justifying_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f5_rightskip_override/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f6_roman_pagenumbering/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f7_parindent_zero/: expected_findings.json  expected_report.txt
tests/fixtures/uf_f8_missing_acknowledgements_macro/: expected_findings.json  expected_report.txt
(+33 files in other folders)
