[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2ufdissertation"
version = "0.1.0"
description = "Validate and compile UF Graduate School dissertations and theses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yu (Hugh) Zheng", email = "hugh.stats@gmail.com"}]
keywords = ["latex", "dissertation", "thesis", "uf", "university-of-florida", "lualatex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "pytest-cov"]

[project.scripts]
latex2ufdissertation = "converter:main"

[project.urls]
Homepage = "https://github.com/YuZh98/latex2ufdissertation"
Issues = "https://github.com/YuZh98/latex2ufdissertation/issues"

[tool.setuptools]
py-modules = ["converter"]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
"pipeline" = ["template/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
