[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2ufdissertation"
version = "0.3.0"
description = "Validate and compile UF Graduate School dissertations and theses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yu (Hugh) Zheng", email = "hugh.stats@gmail.com"}]
keywords = ["latex", "dissertation", "thesis", "uf", "university-of-florida", "lualatex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["pdfminer.six>=20231228"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "pytest-cov", "pre-commit>=4"]

[project.scripts]
latex2ufdissertation = "latex2ufdissertation.cli:main"

[project.urls]
Homepage = "https://github.com/YuZh98/latex2ufdissertation"
Issues = "https://github.com/YuZh98/latex2ufdissertation/issues"

[tool.setuptools.packages.find]
include = ["latex2ufdissertation*"]

[tool.setuptools.package-data]
"latex2ufdissertation.pipeline" = ["template/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["latex2ufdissertation"]

[tool.coverage.report]
# Floor ratchets up as coverage improves; target is 85% by v1.0 release.
# Bump this number whenever a PR raises the actual coverage so the gate
# does not regress. CONTRIBUTING.md documents the ratchet policy.
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
